--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,2 @@
 eclipse.preferences.version=1
-encoding//WebContent/map/map.html=UTF-8
-encoding//WebContent/rooms/standard.html=UTF-8
+encoding//WebContent/admin/test1.jsp=UTF-8
